--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Two -->
                 <hr>
-                <div style="display: none;">
+                <div style="display: block;">
                 <h1><strong>My Expertice</strong><strong/></h1>
 <ul class="My Expertice">
    <li class="My Expertice" aria-label="advanced">Branding</li>
