--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Two -->
                 <hr>
                 <div style="display: block;">
-                <h1><strong>My Expertice</strong><strong/></h1>
+                <h1><strong>My Skills</strong><strong/></h1>
 <ul class="My Expertice">
    <li class="My Expertice" aria-label="advanced">Branding</li>
   <li class="My Expertice" aria-label="pro">Corporate Identity</li>
