skill bar with anim

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body id="top">
@@ -35,6 +36,19 @@
 
 				<!-- Two -->
                 <hr>
+
+                <h1>Mad Skills</h1>
+<ul class="skills">
+  <li class="skill" aria-label="advanced">Bow Staff</li>
+  <li class="skill" aria-label="novice">Computer Hacking</li>
+  <li class="skill" aria-label="pro">Masculinity</li>
+  <li class="skill" aria-label="average">Attractiveness</li>
+  <li class="skill" aria-label="l33tasuar">Making skills bars with SASS</li>
+</ul>
+
+
+
+
                 <div style="display: block;">
                 <h1><strong>My Skills</strong><strong/></h1>
 <ul class="My Expertice">
