mad skill to my skills

--- a/index.html
+++ b/index.html
@@ -37,28 +37,18 @@
 				<!-- Two -->
                 <hr>
 
-                <h1>Mad Skills</h1>
-<ul class="skills">
-  <li class="skill" aria-label="advanced">Bow Staff</li>
-  <li class="skill" aria-label="novice">Computer Hacking</li>
-  <li class="skill" aria-label="pro">Masculinity</li>
-  <li class="skill" aria-label="average">Attractiveness</li>
-  <li class="skill" aria-label="l33tasuar">Making skills bars with SASS</li>
-</ul>
 
 
 
-
-                <div style="display: block;">
+                
                 <h1><strong>My Skills</strong><strong/></h1>
-<ul class="My Expertice">
-   <li class="My Expertice" aria-label="advanced">Branding</li>
-  <li class="My Expertice" aria-label="pro">Corporate Identity</li>
-  <li class="My Expertice" aria-label="advanced">Social Media Promotions</li>
-  <li class="My Expertice" aria-label="advanced">UI/UX Strategy</li>
-  <li class="My Expertice" aria-label="pro">Visualizer</li>
+<ul class="skills">
+   <li class="skill" aria-label="advanced">Branding</li>
+  <li class="skill" aria-label="pro">Corporate Identity</li>
+  <li class="skill" aria-label="advanced">Social Media</li>
+  <li class="skill" aria-label="advanced">UI/UX Strategy</li>
+  <li class="skill" aria-label="pro">Visualizer</li>
 </ul>
-                    </div>
 
                 
 					<section id="two">
